--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -54,6 +57,27 @@
         </div>
 
     </section>
+    <section class="project banner">
+        <div class="half-width side">
+            <img src="images/pictures/coding.png">
+        </div>
+        <div class="half-width side">
+            <h1 class="font">Develop</h1>
+            <h1 class="font">Without limits</h1>
+            <p>Women’s empowerment can be defined to promoting women’s sense of self-worth, their ability to determine
+                their own choices, and their right to influence social change for themselves and others.</p>
+            <a class="button" target="_blank"
+                href="https://www.worldvision.com.au/womens-empowerment/#:~:text=Women's%20empowerment%20can%20be%20defined,change%20for%20themselves%20and%20others.&text=In%20Western%20countries%2C%20female%20empowerment,women's%20rights%20movement%20in%20history.">Read
+                The Documentation</a>
+        </div>
+    </section>
+    <footer>
+        <div class="cap">
+            <h1 id="six">Mission <span id="clr">2022</span></h1>
+            <p>Hard work ,Perseverance and Ditermination for 2022 </p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
