--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
                 The Documentation</a>
         </div>
     </section>
+    <section class="banner ">
+        <h1>Build <span>Global Worming Report</span></h1>
+        <div>
+
+
+        </div>
+    </section>
     <footer>
         <div class="cap">
             <h1 id="six">Mission <span id="clr">2022</span></h1>
