--- a/index.html
+++ b/index.html
@@ -71,11 +71,16 @@
                 The Documentation</a>
         </div>
     </section>
-    <section class="banner ">
-        <h1>Build <span>Global Worming Report</span></h1>
-        <div>
-
-
+    <section class="banner my-portfolio">
+        <div class="intro">
+            <h1>Hi,</h1>
+            <h1>I'm <span id="nm">Nabil,</span></h1>
+            <h1>Web Designer</h1>
+            <h3>HTML / CSS / Java</h3>
+            <a class="contact" target="_blank" href="https://github.com/nabilfaieazdipta">Contact Me</a>
+        </div>
+        <div class="portfolio-pic">
+            <img src="images/person/1401615988-removebg-preview.png">
         </div>
     </section>
     <footer>
@@ -83,7 +88,6 @@
             <h1 id="six">Mission <span id="clr">2022</span></h1>
             <p>Hard work ,Perseverance and Ditermination for 2022 </p>
         </div>
-
     </footer>
 </body>
 
