--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
                 The Documentation</a>
         </div>
     </section>
+    <section class="code banner">
+        <div class="half-width side">
+            <h1 class="font">Know Our</h1>
+            <h1 class="font">Global Community</h1>
+            <p>The people or nations of the world, considered as being closely connected by modern telecommunications
+                and as being economically, socially, and politically interdependent</p>
+            <a class="button" target="_blank" href="https://en.wikipedia.org/wiki/Global_Communities">Read
+                The Documentation</a>
+        </div>
+        <div class="half-width side2">
+            <img src="images/pictures/project.png">
+        </div>
+    </section>
+    </section>
     <section class="banner my-portfolio">
         <div class="intro">
             <h1>Hi,</h1>
